refactor(appointments): update appointment model, DTOs, repository, service and controller
- Replace Service with OfferedService in Appointment entity
- Update AppointmentDTO to include client, service and employee IDs and names
- Adjust AppointmentRequestDTO with required IDs and client notes
- Refactor AppointmentRepository with JPQL query for client and date range
- Simplify AppointmentController and stream mapping
- Update AppointmentService to handle new DTO structure and entity relations